# Discord-Bot-Template-v1

./: .pdm.toml  pyproject.toml
src/main/: bot.py  setting.json
src/main/package/: files.py
test/: file.py  init.py  login.py
